src/openc2lib/actuators/slpfiptables_rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat May  3 17:26:50 2025
*filter
:INPUT ACCEPT [162:96301]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [130:60968]
-A INPUT -s 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A INPUT -s 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A INPUT -s 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A INPUT -s 172.19.0.0/24 -j ACCEPT
-A INPUT -s 172.19.0.1/32 -p tcp -m tcp --sport 8080 -j ACCEPT
-A FORWARD -s 172.19.0.0/24 -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A FORWARD -s 172.19.0.0/24 -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A FORWARD -s 172.19.0.0/24 -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A FORWARD -s 172.19.0.0/24 -d 172.19.0.0/24 -j ACCEPT
-A FORWARD -s 172.19.0.1/32 -p tcp -m tcp --sport 8080 -j ACCEPT
-A OUTPUT -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A OUTPUT -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A OUTPUT -d 172.19.0.0/24 -j REJECT --reject-with icmp-host-unreachable
-A OUTPUT -d 172.19.0.0/24 -j ACCEPT
-A OUTPUT -s 172.19.0.1/32 -p tcp -m tcp --sport 8080 -j ACCEPT
COMMIT
# Completed on Sat May  3 17:26:50 2025
